# manifest-store-cli

./: Cargo.toml
.github/workflows/: build-linux.yml
src/: main.rs  manifest_store.rs
