[package]
name = "manifest-store-cli"
version = "0.1.5"
edition = "2024"

[dependencies]
async-walkdir = "2.1.0"
bytes = "1.7.2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.30"
futures-lite = "2.6.1"
log = "0.4.22"
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
thiserror = "2.0.7"
tokio = { version = "*", features = ["full"] }
